--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@
 		}
 		
 		.jumbotron {
-		background-image:url('florence.jpg');
+		background-image:url('Florence.jpg');
 		background-size:cover;
 		height:750px;
 		}
