--- a/about_aromamarketing.css
+++ b/about_aromamarketing.css
@@ -16,4 +16,48 @@
 		font-weight:bold;
 		}
 		
+		* {-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;}
+.jumbotron {
+		background-color:#330033;
+		color: #FFFF00;
+		padding: 200px 25px;
+		}
+		
+.container-fluid {padding:200px 50px;}
+
+.thumbnail img{height:150px;}
+
+.thumbnail {border:none;}
+
+ .bg-grey {
+      background-color: #f6f6f6;
+	  
+	  .carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #f4511e;
+}
+
+.carousel-indicators li {
+    border-color: #f4511e;
+}
+
+.carousel-indicators li.active {
+    background-color: #f4511e;
+}
+
+.item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+}
+
+.item span {
+    font-style: normal;
+}
+
+		
 		
