--- a/about_aromamarketing.css
+++ b/about_aromamarketing.css
@@ -29,9 +29,7 @@
 
 .thumbnail img{height:150px;}
 
-.thumbnail {border:none;
-	height:200px;
-}
+.thumbnail {border:none;}
 
  .bg-grey {
       background-color: #f6f6f6;
@@ -41,7 +39,7 @@
     color: #f4511e;
 }
 
-.carousel-indicators li {
+/*.carousel-indicators li {
     border-color: #f4511e;
 }
 
@@ -59,7 +57,7 @@
 
 .item span {
     font-style: normal;
-}
+}/*
 
 		
 		
