--- a/about_aromamarketing.css
+++ b/about_aromamarketing.css
@@ -39,7 +39,7 @@
     color: #f4511e;
 }
 
-/*.carousel-indicators li {
+.carousel-indicators li {
     border-color: #f4511e;
 }
 
@@ -57,7 +57,7 @@
 
 .item span {
     font-style: normal;
-}/*
+}
 
 		
 		
